[package]
name = "genetics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = { version = "0.4", default-features = false }
tokio = { version = "1.17", features = ["full"] } 
serde = { version = "1.0", features = ["derive"] }
sort = { version = "0.8.5" }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
serde_yaml = "0.9"
serde_json = "1.0"
rand = { version = "0.8.5" }
futures = "0.3.25"
ndarray = { path = "../ndarray" }